--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Fight procrastination and maintain productivity with this pomodoro clock"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Overpass&family=Quantico&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
